--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="shortcut icon" type="image/x-icon" href="./src/images/logo.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="./src/assets/logo.png" />
 </head>
 <body>
     <div id="root"></div>
